--- a/LogoCore/LogoCore.vcxproj
+++ b/LogoCore/LogoCore.vcxproj
@@ -141,11 +141,14 @@
   <ItemGroup>
     <ClInclude Include="Canvas.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="InstructionHandler.h" />
     <ClInclude Include="LogoCore.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Turtle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Canvas.cpp" />
+    <ClCompile Include="InstructionHandler.cpp" />
     <ClCompile Include="LogoCore.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -153,6 +156,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Turtle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
