feat: Verification for 'is turtle inbound'

--- a/LogoCore/LogoCore.vcxproj
+++ b/LogoCore/LogoCore.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="Canvas.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="InstructionHandler.h" />
+    <ClInclude Include="IsInbound.h" />
     <ClInclude Include="LogoCore.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Turtle.h" />
