--- a/LogoCore/LogoCore.vcxproj.filters
+++ b/LogoCore/LogoCore.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="InstructionHandler.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
+    <ClInclude Include="IsInbound.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LogoCore.cpp">
