--- a/LogoCore/LogoCore.vcxproj
+++ b/LogoCore/LogoCore.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Canvas.h" />
+    <ClInclude Include="FileHandler.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="InstructionHandler.h" />
     <ClInclude Include="IsInbound.h" />
@@ -150,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Canvas.cpp" />
+    <ClCompile Include="FileHandler.cpp" />
     <ClCompile Include="InstructionHandler.cpp" />
     <ClCompile Include="LogoCore.cpp" />
     <ClCompile Include="pch.cpp">
