--- a/LogoCore/LogoCore.vcxproj
+++ b/LogoCore/LogoCore.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="InstructionHandler.h" />
     <ClInclude Include="IsInbound.h" />
     <ClInclude Include="LogoCore.h" />
+    <ClInclude Include="ParsingHelper.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Tokenizer.h" />
     <ClInclude Include="Turtle.h" />
@@ -154,6 +155,7 @@
     <ClCompile Include="FileHandler.cpp" />
     <ClCompile Include="InstructionHandler.cpp" />
     <ClCompile Include="LogoCore.cpp" />
+    <ClCompile Include="ParsingHelper.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
