Move FileHandler to LogoCPP and update references
FileHandler.cpp and FileHandler.h were moved from LogoCore to LogoCPP, and project files were updated to reflect this change. References in main.cpp were updated to use the new location, and a typo in the success message was fixed. The example input was also updated to call krzaczek with 8 instead of 3.

--- a/LogoCPP/LogoCPP.vcxproj
+++ b/LogoCPP/LogoCPP.vcxproj
@@ -139,12 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="FileHandler.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="LogoCPP.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FileHandler.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
